--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>React基础项目</title>
-</head>
-<body>
-  <div id="app"></div>
-</body>
-<!--引入出口文件-->
-<!-- <script src="./dist/index.js"></script> -->
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="./react.dll.js"></script>
+  </body>
+  <!--引入出口文件-->
+  <!-- <script src="./dist/index.js"></script> -->
 </html>
