--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./react.dll.js"></script>
+    <!-- <script src="react.dll.js"></script> -->
   </body>
   <!--引入出口文件-->
   <!-- <script src="./dist/index.js"></script> -->
